...
              fullWidth
              variant="secondary"
            />
          </View>
        ) : (
          <Button
            testID="start-workout-button"
            label={t('routineDetail.startWorkout')}
            onPress={handleStartSession}
            fullWidth
            size="lg"
            disabled={exercises.length === 0}
          />
...
