appId: com.forzza.app
---
- launchApp
- tapOn: "¿Querés un coach?"
- assertVisible: "Coaches"
- assertVisible: "Buscar coach"
